@@ -159,9 +159,41 @@ public class ProjectView extends TmfView {
                 if (element instanceof LTTngExperimentNode) {
                 	LTTngExperimentNode experiment = (LTTngExperimentNode) element;
                 	selectExperiment(experiment);                
+                } else {
+                    if (element instanceof LTTngTraceNode) {
+                        LTTngTraceNode trace = (LTTngTraceNode) element;
+                        selectTrace(trace);
+                    }
                 }
             }
         });
+    }
+
+    private void selectTrace(LTTngTraceNode traceNode) {
+        if (fSelectedExperiment != null) {
+            fSelectedExperiment.dispose();
+        }
+
+        try {
+            ITmfTrace[] traces = new ITmfTrace[1];
+            IResource res = traceNode.getFolder();
+            String location = res.getLocation().toOSString();
+            ITmfTrace trace = new LTTngTrace(location, waitForCompletion);
+            traces[0] = trace;
+            fSelectedExperiment = new LTTngExperiment<LttngEvent>(LttngEvent.class, traceNode.getName(), traces);
+            TmfExperiment.setCurrentExperiment(fSelectedExperiment);
+            
+            // Make sure the lttng-core, experiment selection context is ready
+            // for an event request from any view
+            StateManagerFactory.getExperimentManager().experimentSelected_prep(
+                    (TmfExperiment<LttngEvent>) fSelectedExperiment);
+
+            broadcast(new TmfExperimentSelectedSignal<LttngEvent>(this, fSelectedExperiment));
+        } catch (FileNotFoundException e) {
+            return;
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
     }
 
 	private boolean waitForCompletion = true;
